--- a/src/styles/_promo.scss
+++ b/src/styles/_promo.scss
@@ -10,6 +10,8 @@
     rgb(23, 69, 237) 54%,
     rgb(46, 90, 251) 100%
   );
+  background-color: #2b2b2b;
+
   &__inner {
     margin-bottom: 80px;
 
